# Vins-Mono-noted

./: README.md
camera_model/: CMakeLists.txt  Readme.md  package.xml
config/euroc/: euroc_config.yaml
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h  tic_toc.h
pose_graph/src/: pose_graph.cpp  pose_graph_node.cpp
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: euroc.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp
vins_estimator/src/utility/: utility.cpp
