<?xml version="1.0"?>
<package>
    <name>camera_model</name>
    <version>0.0.0</version>
    <description>The camera_model package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="dvorak@todo.todo">dvorak</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>BSD</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>


    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>

