<?xml version="1.0" ?>

<package>
    <name>vins_estimator</name>
    <version>0.0.0</version>
    <description>The vins_estimator package</description>

    <maintainer email="qintonguav@gmail.com">qintong</maintainer>

    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>


    <export>

    </export>
</package>
